# FrameworkLatencyTester

./: .gitignore  Makefile  README.md  calibrate_yalmd.py  control_yalmd.py  start_measurement.sh  start_measurement_new.sh  start_start_measurement.sh  start_start_measurement_new.sh
arduino_clicker/: control_yalmd.py  platformio.ini  receive.py
arduino_clicker/src/: main.cpp
click_simulator/: Makefile  main.c
latency_tester/: Makefile  fyalmd.py  main.cpp  plots.ipynb
pixel_reader/: CMakeLists.txt  main.cpp
test_programs/: Makefile
test_programs/FLTK/: Makefile  image.cpp  rects.cpp  simple.cpp
test_programs/Java2D/: Java2D.java  Java2D_image.java  Java2D_rects.java  MANIFEST.MF  MANIFEST_IMAGE.MF  MANIFEST_RECTS.MF  Makefile
test_programs/JavaAWT/: JavaAWT.java  MANIFEST.MF  Makefile
test_programs/JavaSwing/: JavaSwing.java  JavaSwing_rects.java  Makefile
test_programs/OPENGL_GLEW/: Makefile  image.cpp  rects.cpp  simple.cpp
test_programs/OPENGL_GLUT/: Makefile  image.cpp  rects.cpp  simple.cpp
test_programs/SDL2/: Makefile  image.cpp  main.cpp  rects.cpp  simple.cpp
test_programs/allegro/: Makefile  simple.c
test_programs/gtk/: Makefile  image.c  rects.c  simple.c
test_programs/xcb/: Makefile  image.c  rects.c  simple.c
test_programs/xlib/: Makefile  image.c  rects.c  simple.c
test_programs_mine/fltk/: CMakeLists.txt
test_programs_mine/gtk/: CMakeLists.txt
test_programs_mine/gtk/gtk/: CMakeLists.txt
test_programs_mine/gtk/gtk/gtk/: CMakeLists.txt  gtk.cpp  gtk.h
